--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,3 +1,8 @@
+body{
+ color: #FF0000; /*font color*/
+ background-color: #EEEEEE
+
+}
 #content {
   margin-left: auto;
   margin-right: auto;
@@ -6,4 +11,20 @@
 
 #greeting-container {
   margin-top: 20px;
+}
+
+h1{
+ color: #000000;
+ font-family: "Helvetica", sans-serif;
+}
+
+.container {
+   width: 200px;
+   height: 120px;
+}
+
+/* resize images */
+.container img {
+   width: 100%;
+   height: auto;
 }
