--- a/portfolio/src/main/webapp/css/styles.css
+++ b/portfolio/src/main/webapp/css/styles.css
@@ -4516,7 +4516,7 @@ input[type=button].btn-block {
 }
 
 .card-img,
-.card-img-top,
+.card-img-top,col-lg-8
 .card-img-bottom {
   flex-shrink: 0;
   width: 100%;
@@ -10228,7 +10228,7 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000000 100%), url("../assets/img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000000 100%), url("../assets/img/masthead.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
