change google project desc and add github buttons below project in customstyles

--- a/portfolio/src/main/webapp/css/customstyles.css
+++ b/portfolio/src/main/webapp/css/customstyles.css
@@ -68,3 +68,19 @@ h1{
     background: url("NatalieTarnmin.jpg") no-repeat;
     background-size: contain;
 }
+
+.contact-section .social a {
+  text-align: center;
+  height: 3rem;
+  width: 3rem;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 100%;
+  line-height: 3rem;
+  color: rgba(255, 255, 255, 0.3);
+}
+.contact-section .social a:hover {
+  color: rgba(255, 255, 255, 0.5);
+}
+.contact-section .social a:active {
+  color: #fff;
+}
