--- a/portfolio/src/main/webapp/css/customstyles.css
+++ b/portfolio/src/main/webapp/css/customstyles.css
@@ -69,11 +69,22 @@ h1{
     margin-top: 0.5rem;
 }
 
+.project-icons #projecticonborder{
+    text-align: center;
+    height: 1.5rem;
+    width: 1.5rem;
+    background: rgba(100, 161, 157, 0.1);
+    border-radius: 100%;
+    /* line-height: 3rem; */
+    color: rgba(255, 255, 255, 0.3);
+    
+}
+
 .project-icons a {
   text-align: center;
-  height: 1.5rem;
-  width: 1.5rem;
-  background: rgba(100, 161, 157, 1);
+  height: 3rem;
+  width: 3rem;
+  background: rgba(255, 255, 255, 0.1);
   border-radius: 100%;
   line-height: 3rem;
   color: rgba(255, 255, 255, 0.3);
@@ -85,4 +96,16 @@ h1{
 
 .project-icons a:active {
   color: rgba(255, 255, 255, 1);
+}
+
+.resizewebappimg {
+  width: 90%;
+  height: 75%;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.resizemobiletesting {
+  width: 95%;
+  height: 20%;
+  background: rgba(255, 255, 255, 0.1);
 }
