--- a/portfolio/src/main/webapp/css/customstyles.css
+++ b/portfolio/src/main/webapp/css/customstyles.css
@@ -68,3 +68,19 @@
   padding-bottom: 4rem;
   padding-top: 4rem;
 }
+
+#comment-list {
+  list-style-type: none;
+}
+
+.comment {
+  border: thin solid black;
+  display: flex;
+  margin: 10px;
+  padding: 10px;
+  width: 300px;
+}
+
+.comment span {
+  flex-grow: 1;
+}
