add comments, delete unnecessary code, fix method names

--- a/portfolio/src/main/webapp/css/customstyles.css
+++ b/portfolio/src/main/webapp/css/customstyles.css
@@ -69,6 +69,8 @@
   padding-top: 4rem;
 }
 
+/* Contact Section Comments - Changes styling of each comment. */
+
 #comment-list {
   list-style-type: none;
 }
