--- a/portfolio/src/main/webapp/css/styles.css
+++ b/portfolio/src/main/webapp/css/styles.css
@@ -2392,8 +2392,8 @@ textarea.form-control {
 
 .form-inline {
   display: flex;
-  flex-flow: row wrap;
-  align-items: center;
+  flex-direction: column;
+  /* align-items: center; */
 }
 .form-inline .form-check {
   width: 100%;
@@ -10272,6 +10272,7 @@ body {
 
 .about-section {
   padding-top: 10rem;
+  padding-bottom: 10rem;
   background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
 }
 .about-section p {
@@ -10279,8 +10280,7 @@ body {
 }
 
 .projects-section {
-  /* padding: 10rem 0; might need to switch back later*/
-  margin-top: 10rem;
+  padding-top: 10rem;
 }
 .projects-section .featured-text {
   padding: 2rem;
@@ -10326,7 +10326,7 @@ body {
 }
 
 .contact-section {
-  padding-top: 5rem;
+  padding-top: 1rem;
 }
 .contact-section .card {
   border: 0;
