--- a/portfolio/src/main/webapp/css/customstyles.css
+++ b/portfolio/src/main/webapp/css/customstyles.css
@@ -83,6 +83,7 @@
 
 .comment {
   background-color: rgb(100, 161, 157);
+  border-radius: 7px;
   margin-top: 10px;
   overflow: auto;
   padding: 1.25rem 1rem;
@@ -101,10 +102,10 @@
   box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
   color: white;
   font-size: 15px;
+  letter-spacing: none;
   position: absolute;
   right: 15px;
   text-transform: none;
-  letter-spacing: none;
 }
 
 .comment img {
@@ -142,7 +143,6 @@
 #overwrite-center {
   display: inline-block;
   text-align: left;
-
 }
 
 .full-screen-image{
