--- a/portfolio/src/main/webapp/css/styles.css
+++ b/portfolio/src/main/webapp/css/styles.css
@@ -2393,7 +2393,6 @@ textarea.form-control {
 .form-inline {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
 }
 .form-inline .form-check {
   width: 100%;
@@ -10271,12 +10270,12 @@ body {
 }
 
 .about-section {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
   background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
+  padding-bottom: 10rem;
+  padding-top: 10rem;
 }
 .about-section p {
-  /* margin-bottom: 5rem; */
+  /* TODO(ntarn): Check if this may be needed. margin-bottom: 5rem; */
 }
 
 .projects-section {
